# winsearch

./: Cargo.toml
src/: main.rs  utility.rs
src/utility/: meta.rs  search.rs  util.rs
